# tk-postgres-pool

./: Cargo.toml  rustfmt.toml
examples/: basic.rs
src/: client.rs  connection.rs  lib.rs  pg.rs  stream_fold.rs  stream_for_each.rs  vec_stream.rs
src/types/: mod.rs  special.rs  type_gen.rs
